leo3/tests/ui/leanclass_unsupported_generic_type.stderr
error: generic type `HashMap` is not supported in generated Lean declarations; only Vec<T>, Option<T>, Result<T, E>, and pairs `(A, B)` are currently supported
 --> tests/ui/leanclass_unsupported_generic_type.rs:7:44
  |
7 |     fn bad(&self, value: std::collections::HashMap<String, u64>) -> i32 {
  |                                            ^^^^^^^^^^^^^^^^^^^^
